# numerical-methods

./: CMakeLists.txt  README.md  The Method of Least Squares.html  data.csv
The Method of Least Squares_files/: bestfit-implicit.html  bestfit.html  gt-linalg.css  gt-linalg.js  leastsquares.html  leastsquares_002.html
lib/: derule.h  quadrature.h  roots.h  roots_multidim.h
notes/lecture_1/: Lecture1.cpp  notes.md
notes/lecture_10/: notes.md
notes/lecture_2/: notes.md
notes/lecture_3/: grahams_method.m  lecture3_exercises.m  notes.md
notes/lecture_4/: notes4.md
notes/lecture_5/: lec5.md
src/lecture_1/: main.cpp
src/lecture_10/: main.cpp
src/lecture_12/: main.cpp
src/lecture_13/: main.cpp  solution2.cpp
src/lecture_14/: main.cpp  solution14.cpp
src/lecture_2/: main.cpp
src/lecture_3/: main.cpp
src/lecture_4/: main.cpp
src/lecture_5/: lec5.py  main.cpp
src/lecture_6/: main.cpp
src/lecture_7/: main.cpp
src/lecture_8/: main.cpp
src/lecture_9/: main.cpp
src/mandatory/: main.cpp
src/mandatory2/: main.cpp
