# cmake script
cmake_minimum_required(VERSION 3.10)

# set the project name and version
project(NumericalMethods VERSION 1.0)

# specify the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")


include_directories(lib)

set(DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(HEADER ${DIR}/lib)
set(SOURCE1 ${DIR}/src/lecture_1/main.cpp)
set(SOURCE2 ${DIR}/src/lecture_2/main.cpp)
set(SOURCE3 ${DIR}/src/lecture_3/main.cpp)
set(SOURCE4 ${DIR}/src/lecture_4/main.cpp)
set(SOURCE5 ${DIR}/src/mandatory/main.cpp)
set(SOURCE6 ${DIR}/src/lecture_5/main.cpp)
set(SOURCE7 ${DIR}/src/lecture_6/main.cpp)
set(SOURCE8 ${DIR}/src/lecture_7/main.cpp)
set(SOURCE9 ${DIR}/src/lecture_8/main.cpp)
set(SOURCE10 ${DIR}/src/lecture_9/main.cpp)
set(SOURCE11 ${DIR}/src/mandatory2/main.cpp)
set(SOURCE12 ${DIR}/src/lecture_10/main.cpp)
set(SOURCE13 ${DIR}/src/lecture_12/main.cpp)
set(SOURCE14 ${DIR}/src/lecture_13/main.cpp)
set(SOURCE14_1 ${DIR}/src/lecture_13/solution2.cpp)
set(SOURCE15 ${DIR}/src/lecture_14/main.cpp)
set(SOURCE15_1 ${DIR}/src/lecture_14/solution14.cpp)


add_executable(lecture1 ${SOURCE1} ${HEADER})
target_include_directories(lecture1 PRIVATE ${HEADER}) 
add_executable(lecture2 ${SOURCE2} ${HEADER})
target_include_directories(lecture2 PRIVATE ${HEADER}) 
add_executable(lecture3 ${SOURCE3} ${HEADER})
target_include_directories(lecture3 PRIVATE ${HEADER}) 
add_executable(lecture4 ${SOURCE4} ${HEADER})
target_include_directories(lecture4 PRIVATE ${HEADER}) 
add_executable(mandatory ${SOURCE5} ${HEADER})
target_include_directories(mandatory PRIVATE ${HEADER}) 
add_executable(lecture5 ${SOURCE6} ${HEADER})
target_include_directories(lecture5 PRIVATE ${HEADER}) 
add_executable(lecture6 ${SOURCE7} ${HEADER})
target_include_directories(lecture6 PRIVATE ${HEADER}) 
add_executable(lecture7 ${SOURCE8} ${HEADER})
target_include_directories(lecture7 PRIVATE ${HEADER}) 
add_executable(lecture8 ${SOURCE9} ${HEADER})
target_include_directories(lecture8 PRIVATE ${HEADER}) 
add_executable(lecture9 ${SOURCE10} ${HEADER})
target_include_directories(lecture9 PRIVATE ${HEADER})
add_executable(mandatory2 ${SOURCE11} ${HEADER})
target_include_directories(mandatory2 PRIVATE ${HEADER}) 
add_executable(lecture10 ${SOURCE12} ${HEADER})
target_include_directories(lecture10 PRIVATE ${HEADER})
add_executable(lecture12 ${SOURCE13} ${HEADER})
target_include_directories(lecture12 PRIVATE ${HEADER})
add_executable(lecture13 ${SOURCE14} ${HEADER})
target_include_directories(lecture13 PRIVATE ${HEADER})
add_executable(lecture13_2 ${SOURCE14_1} ${HEADER})
target_include_directories(lecture13_2 PRIVATE ${HEADER})
add_executable(lecture14 ${SOURCE15} ${HEADER})
target_include_directories(lecture14 PRIVATE ${HEADER})
add_executable(lecture14_2 ${SOURCE15_1} ${HEADER})
target_include_directories(lecture14_2 PRIVATE ${HEADER})
